force-app/main/default/objects/Flight_Tracker__c/Flight_Tracker__c.object-meta.xml
<CustomObject>
    <description>QCC: Used to track the flight.</description>
    <label>Flight Tracker</label>
    <nameField>
        <displayFormat>FT{000000}</displayFormat>
        <label>Flight Tracker No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flight Trackers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>