force-app/main/default/objects/Flight_Tracker__c/fields/Actual_Arrival_UTC__c.field-meta.xml
<CustomField>
    <fullName>Actual_Arrival_UTC__c</fullName>
    <description>QCC: Actual Arrival UTC of flight</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Actual Arrival UTC</label>
    <type>DateTime</type>
</CustomField>