force-app/main/default/objects/Flight_Tracker__c/fields/Actual_Departure_UTC__c.field-meta.xml
<CustomField>
    <fullName>Actual_Departure_UTC__c</fullName>
    <description>QCC: Actual departure UTC of the flight</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Actual Departure UTC</label>
    <type>DateTime</type>
</CustomField>