force-app/main/default/objects/Flight_Tracker__c/fields/ActualArriDateTime__c.field-meta.xml
<CustomField>
    <fullName>ActualArriDateTime__c</fullName>
    <description>QCC: Actual Arrival Date/Time of the flight from QSOA</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Actual Arrival Date/Time</label>
    <length>29</length>
    <type>Text</type>
</CustomField>