force-app/main/default/objects/Flight_Tracker__c/fields/ActualDepaDateTime__c.field-meta.xml
<CustomField>
    <fullName>ActualDepaDateTime__c</fullName>
    <description>QCC: Actual departure date/time of flight</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Actual Departure Date/Time</label>
    <length>29</length>
    <type>Text</type>
</CustomField>