force-app/main/default/objects/Flight_Tracker__c/fields/Aircraft_Registration__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Registration__c</fullName>
    <description>QCC: Actual Registration of the flight</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Aircraft Registration</label>
    <length>10</length>
    <type>Text</type>
</CustomField>