force-app/main/default/objects/Flight_Tracker__c/fields/Aircraft_Type__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Type__c</fullName>
    <description>QCC: Aircraft Type of the flight</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Aircraft Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>