force-app/main/default/objects/Flight_Tracker__c/fields/Airline__c.field-meta.xml
<CustomField>
    <fullName>Airline__c</fullName>
    <description>QCC: Airline Code of the flight</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Airline</label>
    <length>5</length>
    <type>Text</type>
</CustomField>