force-app/main/default/objects/Flight_Tracker__c/fields/Arrival_Airport__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Airport__c</fullName>
    <description>QCC: Arrival airport of the flight</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Arrival Airport</label>
    <length>3</length>
    <type>Text</type>
</CustomField>