force-app/main/default/objects/Flight_Tracker__c/fields/Departure_Airport__c.field-meta.xml
<CustomField>
    <fullName>Departure_Airport__c</fullName>
    <description>QCC: Departure airport of the flight</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Departure Airport</label>
    <length>3</length>
    <type>Text</type>
</CustomField>