force-app/main/default/objects/Flight_Tracker__c/fields/Estimated_Arrival_UTC__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Arrival_UTC__c</fullName>
    <description>QCC: Estimated Arrival UTC of the flight</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Estimated Arrival UTC</label>
    <type>DateTime</type>
</CustomField>