force-app/main/default/objects/Flight_Tracker__c/fields/Estimated_Departure_UTC__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Departure_UTC__c</fullName>
    <description>QCC: Estimated departure UTC of the flight</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Estimated Departure UTC</label>
    <type>DateTime</type>
</CustomField>