force-app/main/default/objects/Flight_Tracker__c/fields/EstimatedArrDateTime__c.field-meta.xml
<CustomField>
    <fullName>EstimatedArrDateTime__c</fullName>
    <description>QCC: Estimated arrival date/time of the flight</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Estimated Arrival Date/Time</label>
    <length>29</length>
    <type>Text</type>
</CustomField>