force-app/main/default/objects/Flight_Tracker__c/fields/EstimatedDepDateTime__c.field-meta.xml
<CustomField>
    <fullName>EstimatedDepDateTime__c</fullName>
    <description>QCC: Estimated departure Date/time of the flight</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Estimated Departure Date/Time</label>
    <length>29</length>
    <type>Text</type>
</CustomField>