force-app/main/default/objects/Flight_Tracker__c/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <description>QCC: The name of the Event that occurred to the flight</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Event Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>