force-app/main/default/objects/Flight_Tracker__c/fields/Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Flight_Number__c</fullName>
    <description>QCC: Number of the flight</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Flight Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>