force-app/main/default/objects/Flight_Tracker__c/fields/Flight_Status__c.field-meta.xml
<CustomField>
    <fullName>Flight_Status__c</fullName>
    <description>QCC: Status of the flight</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Flight Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>