force-app/main/default/objects/Flight_Tracker__c/fields/IntDom__c.field-meta.xml
<CustomField>
    <fullName>IntDom__c</fullName>
    <description>QCC: Identifies whether the flight is international or domestic</description>
    <label>Int/Dom</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>