force-app/main/default/objects/Flight_Tracker__c/fields/Leg_Actual_Departure_Date_Time_1__c.field-meta.xml
<CustomField>
    <fullName>Leg_Actual_Departure_Date_Time_1__c</fullName>
    <description>QCC: Actual Departure Date/Time of leg 1</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Leg Actual Departure Date/Time 1</label>
    <length>29</length>
    <type>Text</type>
</CustomField>