force-app/main/default/objects/Flight_Tracker__c/fields/Leg_Departure_Port_2__c.field-meta.xml
<CustomField>
    <fullName>Leg_Departure_Port_2__c</fullName>
    <description>QCC: Departure port of leg 2</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Leg Departure Port 2</label>
    <length>3</length>
    <type>Text</type>
</CustomField>