force-app/main/default/objects/Flight_Tracker__c/fields/Leg_EstimatedDepDateTime_2__c.field-meta.xml
<CustomField>
    <fullName>Leg_EstimatedDepDateTime_2__c</fullName>
    <description>QCC: Estimated Departure Date/Time of leg 2</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Leg EstimatedDepDateTime 2</label>
    <length>29</length>
    <type>Text</type>
</CustomField>