force-app/main/default/objects/Flight_Tracker__c/fields/LocalScheduleDate__c.field-meta.xml
<CustomField>
    <fullName>LocalScheduleDate__c</fullName>
    <description>QCC: Local Schedule Date, this will be different that of Origin date for multi leg flight (for leg 2)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Local Schedule Date</label>
    <type>Date</type>
</CustomField>