force-app/main/default/objects/Flight_Tracker__c/fields/MessageId__c.field-meta.xml
<CustomField>
    <fullName>MessageId__c</fullName>
    <description>QCC: Message Id used to link Flight Trackers for Offload Event</description>
    <encryptionScheme>None</encryptionScheme>
    <label>MessageId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>