force-app/main/default/objects/Flight_Tracker__c/fields/NewArrivalPort__c.field-meta.xml
<CustomField>
    <fullName>NewArrivalPort__c</fullName>
    <description>QCC: The diverted port of the flight</description>
    <encryptionScheme>None</encryptionScheme>
    <label>New Arrival Port</label>
    <length>30</length>
    <type>Text</type>
</CustomField>