force-app/main/default/objects/Flight_Tracker__c/fields/Operational_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Operational_Carrier__c</fullName>
    <description>QCC: Identifies the Flight Operator</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Operational Carrier</label>
    <length>5</length>
    <type>Text</type>
</CustomField>