force-app/main/default/objects/Flight_Tracker__c/fields/Origin_Date__c.field-meta.xml
<CustomField>
    <fullName>Origin_Date__c</fullName>
    <description>QCC: The origin date of the flight</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Origin Date</label>
    <type>Date</type>
</CustomField>