force-app/main/default/objects/Flight_Tracker__c/fields/Scheduled_Arrival_UTC__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Arrival_UTC__c</fullName>
    <description>QCC: Scheduled arrival UTC of the flight</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Scheduled Arrival UTC</label>
    <type>DateTime</type>
</CustomField>