force-app/main/default/objects/Flight_Tracker__c/fields/Scheduled_Depature_UTC__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Depature_UTC__c</fullName>
    <description>QCC: Scheduled departure UTC of the flight</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Scheduled Departure UTC</label>
    <type>DateTime</type>
</CustomField>