force-app/main/default/objects/Flight_Tracker__c/fields/ScheduledArrDateTime__c.field-meta.xml
<CustomField>
    <fullName>ScheduledArrDateTime__c</fullName>
    <description>QCC: Scheduled arrival date/time of the flight</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Scheduled Arrival Date/Time</label>
    <length>29</length>
    <type>Text</type>
</CustomField>