force-app/main/default/objects/Flight_Tracker__c/fields/ScheduledDepTime__c.field-meta.xml
<CustomField>
    <fullName>ScheduledDepTime__c</fullName>
    <description>QCC: Scheduled departure date/time of the flight</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Scheduled Departure Date/Time</label>
    <length>29</length>
    <type>Text</type>
</CustomField>