force-app/main/default/objects/Flight_Tracker__c/fields/Sub_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Sub_Event_Name__c</fullName>
    <description>QCC: The sub-event type occurred to the flight</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Sub Event Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>