force-app/main/default/objects/Flight_Tracker__c/fields/Tech_CompositeId__c.field-meta.xml
<CustomField>
    <fullName>Tech_CompositeId__c</fullName>
    <description>QCC: External Id Field, Combination of Flight Number, Origin, DEP and ARR Port</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Tech_CompositeId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>