force-app/main/default/objects/Flight_Tracker__c/fields/Tech_CompositeId_Diverted1__c.field-meta.xml
<CustomField>
    <fullName>Tech_CompositeId_Diverted1__c</fullName>
    <description>QCC: Unique Key on Flight Diversion scenario</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tech_CompositeId_Diverted1</label>
    <length>225</length>
    <type>Text</type>
</CustomField>