force-app/main/default/objects/Flight_Tracker__c/fields/Tech_First_Event_Created__c.field-meta.xml
<CustomField>
    <fullName>Tech_First_Event_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>QCC: First Event Created</description>
    <label>First Event Created</label>
    <type>Checkbox</type>
</CustomField>