force-app/main/default/objects/Flight_Tracker__c/fields/Tech_Second_Event_Created__c.field-meta.xml
<CustomField>
    <fullName>Tech_Second_Event_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>QCC: Technical field to create the 3 rd event.</description>
    <label>Second Event Created</label>
    <type>Checkbox</type>
</CustomField>