force-app/main/default/objects/Flight_Tracker__c/fields/TrackerType__c.field-meta.xml
<CustomField>
    <fullName>TrackerType__c</fullName>
    <description>QCC: Tracker type to determine if single sector or Multi sector first leg or  Multi Sector Non First leg</description>
    <label>Tracker Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Sector</fullName>
            </value>
            <value>
                <fullName>Multi Sector - First Leg</fullName>
            </value>
            <value>
                <fullName>Multi Sector - Not First Leg</fullName>
            </value>
            <value>
                <fullName>No Match</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>