force-app/main/default/objects/Flight_Tracker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Flight_Number__c</columns>
    <columns>Departure_Airport__c</columns>
    <columns>Arrival_Airport__c</columns>
    <columns>Origin_Date__c</columns>
    <columns>Event_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Aircraft_Registration__c</columns>
    <columns>EstimatedDepDateTime__c</columns>
    <columns>Estimated_Departure_UTC__c</columns>
    <columns>Actual_Departure_UTC__c</columns>
    <columns>Actual_Arrival_UTC__c</columns>
    <columns>ScheduledDepTime__c</columns>
    <columns>TrackerType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>