force-app/main/default/objects/Flight_Tracker__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>NAME</columns>
    <columns>Event_Name__c</columns>
    <columns>Flight_Number__c</columns>
    <columns>Flight_Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Tech_CompositeId__c</columns>
    <columns>Tech_CompositeId_Diverted1__c</columns>
    <columns>Tech_CompositeId_Diverted__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Arrival_Airport__c</columns>
    <columns>Departure_Airport__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today</label>
</ListView>